# PackageHandoff

./: .gitattributes  .gitignore  PackageHandoff.html  PackageHandoff.org  README.md  index.html  org-style.css  params.json
codeHaskell-pho/: LICENSE  codeHaskell-pho.cabal  stack.yaml
codeHaskell-pho/.stack-work/install/x86_64-linux/lts-7.0/8.0.1/flag-cache/: GLURaw-2.0.0.2-FbcPHzTa7vLEnCQ0kkJ8B4  GLUT-2.7.0.10-A3NqGto8XAVI0ysflkZZW9  JuicyPixels-3.2.8-KBBGrEaocoH5BvQMvr2w05  MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  NumInstances-1.4-Czq4MbYtsRc4Q7nfMGQKMs  ObjectName-1.1.0.1-HHHIolNI8Pm5H3OGkgSUrO  OpenGL-3.0.1.0-2SQfSEFR02AIolFfoam9tJ  OpenGLRaw-3.2.2.0-KWU3ruQNCGR7AsVafRovL  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  active-0.2.0.10-BwMkGoQcvJV47kGRIVVQzb  adjunctions-4.3-3ol9sWZt3In19pwXwPv3Xc  aeson-0.11.2.1-7upVB3k6XZaETFQEHHKnl  aeson-pretty-0.8.2-AgpsU3eHJER580DIUTIVDH  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.0.2-GLM6q4XQBSiI4fJOXoBxlu  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  bindings-DSL-1.0.23-GUrVdpTUVQC2JWoov2sGwA  bindings-gsl-0.2.1-CozUaBJ1PgAESXyF4rXfh8  blank-canvas-0.6-1FZu13SoGhTMuAsM1CDwh  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  bmp-1.2.6.3-KF4xHl5RTVIp6NQI8dI2I  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytes-0.15.2-LMf93HWO4lJBy9xhAb4Icx  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.3.0-90KodwwwQanJlL7equBhpB  circle-packing-0.1.0.5-KgymD5nt1dV2mqSNFjQ9xq  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  codeHaskell-pho-0.1.0.0-APcqw6UN0lQ4acvZdcNRiv  colour-2.3.3-1clKnMqHWhQAElTFd8Ydyp  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  (+102 more)
codeHaskell-pho/.stack-work/install/x86_64-linux/lts-7.0/8.0.1/pkgdb/: bindings-gsl-0.2.1-CozUaBJ1PgAESXyF4rXfh8.conf  package.cache  (+4 more)
codeHaskell-pho/app/: Main.hs  Main.hs_bkp  MainSinglePackageVariableVelocity.org
codeHaskell-pho/src/: OnePackageVariableVelocity.hs  PackageHandoffPrelude.hs  ProbX.hs  SinglePackageRouting.hs
(+383 files in other folders)
