name:                codeHaskell-pho
version:             0.1.0.0
synopsis:            A software environment to experiment with Heuristics for Package handoff problems.
description:         Please see README.md
homepage:            https://github.com/githubuser/codeHaskell-pho#readme
license:             BSD3
license-file:        LICENSE
author:              Gaurish Telang
maintainer:          gaurish108@gmail.com
copyright:           2016 Gaurish Telang 
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PackageHandoffPrelude
                     , OnePackageVariableVelocity 
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , diagrams-lib
                     , diagrams-svg
                     , palette  
                     , diagrams-canvas
                     , bindings-gsl
                     , palette
                     , hmatrix-glpk
                     , reactive-banana
                     , random
                     , fgl
                     , gloss
                     , quickcheck
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , codeHaskell-pho
                     , containers
                     , diagrams-li2b
                     , diagrams-svg
                     , palette
                     , diagrams-canvas
                     , bindings-gsl
                     , palette
                     , hmatrix-glpk
                     , reactive-banana
                     , random
                     , fgl  
                     , gloss
  default-language:    Haskell2010

test-suite codeHaskell-pho-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , codeHaskell-pho
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/codeHaskell-pho
